Fix debian/c* files

--- a/debian/control
+++ b/debian/control
@@ -3,17 +3,19 @@ Section: ruby
 Priority: optional
 Maintainer: Debian Ruby Extras Maintainers <pkg-ruby-extras-maintainers@lists.alioth.debian.org>
 Uploaders: Balasankar C <balasankarc@autistici.org>
-Build-Depends: debhelper (>= 7.0.50~), gem2deb, ruby-rspec, rake
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 7.0.50~), gem2deb, ruby-rspec (>= 3.0.0), rake
+Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/pkg-ruby-extras/ruby-slack-notifier.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-ruby-extras/ruby-slack-notifier.git;a=summary
 Homepage: http://github.com/stevenosloan/slack-notifier
-Testsuite: autopkgtest
+Testsuite: autopkgtest-pkg-ruby
 XS-Ruby-Versions: all
 
 Package: ruby-slack-notifier
 Architecture: all
 XB-Ruby-Versions: ${ruby:Versions}
 Depends: ${shlibs:Depends}, ${misc:Depends}, ruby | ruby-interpreter
-Description: A slim ruby wrapper for posting to slack webhooks
- A slim ruby wrapper for posting to slack webhooks
+Description: Ruby wrapper for posting to slack webhooks
+ A slim ruby wrapper for posting to slack webhooks. Slack is a team 
+ communication tool that offers persistent chat rooms organized by topic, as 
+ well as private groups and direct messaging
